Fixed the gap between list items.

--- a/src/index.css
+++ b/src/index.css
@@ -119,7 +119,8 @@ textarea:focus {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-  gap: 2.5rem;
+  /* gap: calc((108.5rem - 100rem) / 3); */
+  gap: 3rem;
 }
 
 .post-list__item {
